--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,15 +5,14 @@
 <script src="{% static 'jquery-3.2.1.min.js' %}"></script>
 <script src="{% static 'drawingboard.min.js' %}"></script>
 <script src="{% static 'drawingboard.nocontrol.min.js' %}"></script>
-
 <body>
 <div class="headLine">
-	
+	<H1>Learn To Draw</H1>
 </div>
 <div id="zbeubeu" class="zbeubeu">
 </div>
 <div class="picture-to-draw">
-		<img src="{% static 'drawing1.png' %}" height="90%">
+		<img src="{% static 'drawing1.png' %}" width="550px" height="90%">
 	</div>
 <script>
 	var myBoard = new DrawingBoard.Board('zbeubeu', {
@@ -23,13 +22,15 @@
 					{ DrawingMode: { filler: false } },
 					
 				],
-
+		background: "{% static 'drawing1_template.png' %}",
+		eraserColor : "#fff",
+		stretchImg : true,
 	});
 
 //------------------------------------------------------Customize paint tool----------------------------------------
-	var controlBtns = document.getElementsByClassName("drawing-board-controls")[0];
+	/*var controlBtns = document.getElementsByClassName("drawing-board-controls")[0];
 	document.getElementsByClassName("headLine")[0].appendChild(controlBtns);
-
+*/
 	var pen = document.getElementsByClassName("drawing-board-control-drawingmode-pencil-button");
 	pen[0].id = "button";
 	pen[0].innerHTML = "pen";
@@ -48,9 +49,7 @@
 	reset[0].id = "button";
 	reset[0].innerHTML = "reset";
 
-	document.getElementsByClassName("drawing-board-canvas-wrapper")[0].style.height = "100%";
-	document.getElementsByClassName("drawing-board-canvas")[0].style.height = "100%";
-
+	document.getElementsByClassName("drawing-board-canvas-wrapper")[0].style.cssFloat = "left";
 
 	var stuff = document.getElementsByClassName("drawing-board-cursor");
 	stuff[0].style.display = 'none';
