--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -28,7 +28,7 @@
 					'Download'
 					
 				],
-		background: "{% static 'first_image_tp.png' %}",
+		background: "{/home/sovervo/my-blog/blog/static/first_image_tp.png",
 		eraserColor : "#fff",
 		stretchImg : true,
 		color : "#000",
